# crates/server/src/codegen/mod.rs
@@ -7,6 +7,7 @@ pub mod delta_commits;
 pub mod entity_tag_assignments;
 pub mod external_locations;
 pub mod functions;
+pub mod policies;
 pub mod providers;
 pub mod recipients;
 pub mod schemas;
